--- a/app/src/main/res/layout/activity_wash_and_iron.xml
+++ b/app/src/main/res/layout/activity_wash_and_iron.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WashAndIron">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewWashAndIron"
+        android:layout_width="391dp"
+        android:layout_height="419dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -26,8 +36,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="184dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="204dp"
         android:text="WASH AND IRON"
         android:textColor="@color/white"
         android:textSize="25dp"
@@ -35,4 +45,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button7WashAndIron"
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="252dp"
+        android:background="@drawable/altbutton"
+        android:text="ADD TO CART"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewWashAndIron" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
