--- a/app/src/main/res/layout/activity_wash_and_fold.xml
+++ b/app/src/main/res/layout/activity_wash_and_fold.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WashAndFold">
+    tools:context=".DryCleaning">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewFold"
+        android:layout_width="391dp"
+        android:layout_height="419dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -26,63 +36,27 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="184dp"
-        android:layout_marginEnd="268dp"
-        android:text="SNEAKERS"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="204dp"
+        android:text="WASH AND FOLD"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button7Fold"
+        android:layout_width="125dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="252dp"
+        android:background="@drawable/altbutton"
+        android:text="ADD TO CART"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewFold" />
 
-    </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
-
-        <TextView
-            android:id="@+id/textItemName1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="PAIRS"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/textItemPrice1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Price: R150" />
-
-        <Button
-            android:id="@+id/buttonRemove1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:text="-" />
-
-        <TextView
-            android:id="@+id/textItemQuantity1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0" />
-
-        <Button
-            android:id="@+id/buttonAdd1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:text="+" />
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
